syntax = "proto3";

package yasuo.v1;

option go_package = "github.com/manabie-com/backend/pkg/manabuf/yasuo/v1;ypb";

enum NotificationTargetStatus {
  NOTIFICATION_TARGET_STATUS_NONE = 0;
  NOTIFICATION_TARGET_STATUS_ACTIVE = 1;
  NOTIFICATION_TARGET_STATUS_DISABLE = 2;
}

enum PlanPrivilege {
  PLAN_PRIVILEGE_ACCESS_LEARNING_TOPICS = 0;
  PLAN_PRIVILEGE_ACCESS_PRACTICE_TOPICS = 1;
  PLAN_PRIVILEGE_ACCESS_MOCK_EXAMS = 2;
  PLAN_PRIVILEGE_ACCESS_ALL_LOS = 3;
  PLAN_PRIVILEGE_ACCESS_SOME_LOS = 4;
  PLAN_PRIVILEGE_WATCH_VIDEOS = 5;
  PLAN_PRIVILEGE_READ_STUDY_GUIDES = 6;
  PLAN_PRIVILEGE_SKIP_VIDEOS = 7;
  PLAN_PRIVILEGE_CHAT_WITH_TEACHER = 8;
}

enum FamilyRelationship {
  FAMILY_RELATIONSHIP_GUARDIAN = 0;
  FAMILY_RELATIONSHIP_FATHER = 1;
  FAMILY_RELATIONSHIP_MOTHER = 2;
  FAMILY_RELATIONSHIP_GRANDFATHER = 3;
  FAMILY_RELATIONSHIP_GRANDMOTHER = 4;
}
